--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --back-grey: #eeeeee;
+  --back-grey-two: #e1e1e1;
   --back-grey-hover: #dfdfdf;
   --back-grey-active: #d5d5d5;
   --black: #000000;
@@ -363,14 +364,59 @@
   vertical-align: top;
 }
 
+/* Partners */
+
+.partners {
+  padding-bottom: 80px;
+}
+
+.partners__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+
+  outline: 1px solid red;
+  list-style: none;
+}
+
+.partners__list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 180px;
+  outline: 1px solid black;
+}
+
 /* Map */
 
 .map {
+  position: relative;
+  min-height: 416px;
   outline: 2px solid orange;
   outline-offset: -2px;
+  padding-top: 54px;
+  padding-bottom: 54px;
+  box-sizing: border-box;
+
+  background-image: url("../img/map-marker.png"), url("../img/map.png") ;
+  background-position: center center, center center;
+  background-repeat: no-repeat;
+  background-color: var(--back-grey-two);
+  background-size: 231px 190px , cover;
+}
+
+.map__wrapper {
+  position: relative;
+  z-index: 1;
 }
 
 .map__title {
+  margin-top: 0;
+  margin-bottom: 22px;
+
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
@@ -386,10 +432,28 @@
 }
 
 .map__iframe {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   border: none;
 }
 
+.map__contacts {
+  display: flex;
+  flex-direction: column;
+  width: 319px;
+  min-height: 308px;
+  padding: 48px 50px;
+  background-color: var(--white);
+  box-sizing: border-box;
+}
+
 .map__btn-open-modal {
+  margin-top: auto;
+
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
@@ -453,6 +517,7 @@
   grid-template-columns: 260px 760px;
   column-gap: 140px;
   grid-template-rows: min-content min-content min-content;
+  padding-bottom: 60px;
 }
 
 /* Main-Filter */
