--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,12 @@
 
   --border: #d7dcde;
   --border-hover: #b4b9bb;
+  --border-page-grey: #dbdbdb;
 
   --black-grey: #283136;
   --text-grey: #666666;
   --text-grey-two: #444444;
+  --browser: #4d4d4d;
 
   --coral-red: #fb565a;
   --coral-red-hover: #e74246;
@@ -994,7 +996,6 @@ input[type="radio"].visually-hidden {
 
 .patterns__list {
   display: grid;
-  outline: 3px solid green;
   outline-offset: -3px;
   grid-template-columns: 1fr 1fr;
   column-gap: 40px;
@@ -1005,10 +1006,66 @@ input[type="radio"].visually-hidden {
 }
 
 .pattern {
-  outline: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  min-height: 620px;
+  width: 360px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  overflow: hidden;
+
+  border-radius: 3px;
+}
+
+.pattern:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0 , 0, 0.25);
+}
+
+.pattern:hover::before{
+  opacity: 1;
+  transition: 0.2s;
+}
+
+.pattern:hover .pattern__wrapper {
+  display: block;
+  margin-bottom: -2px; /* Понять бы, что двигает все вниз при ховере */
+  transition: 0.2s;
+}
+
+.pattern::before {
+  display: block;
+  width: 360px;
+  height: 40px;
+  content: "";
+  background-image: url("../img/browser.svg");
+  background-repeat: no-repeat;
+  background-size: 360px 40px;
+  background-position: center;
+
+  opacity: 0.12;
+}
+
+.pattern__photo {
+  display: block;
+  margin: 0 auto;
+  height: 578px;
+  object-fit: cover;
+  margin-bottom: -230px;
+}
+
+.pattern__wrapper {
+  display: none;
+  padding: 27px 50px 40px;
+  min-height: 230px;
+  box-sizing: border-box;
+
+  background-color: var(--back-grey);
 }
 
 .pattern__title {
+  margin-top: 0;
+  margin-bottom: 12px;
+
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
@@ -1022,6 +1079,9 @@ input[type="radio"].visually-hidden {
 }
 
 .pattern__description {
+  margin-top: 0;
+  margin-bottom: 33px;
+
   font-size: 16px;
   line-height: 18px;
   font-weight: normal;
@@ -1030,6 +1090,12 @@ input[type="radio"].visually-hidden {
 }
 
 .pattern__btn-price {
+  display: block;
+  border: none;
+  padding: 16px 73px;
+  margin: 0 auto;
+  box-sizing: border-box;
+
   font-size: 16px;
   line-height: 18px;
   font-weight: normal;
@@ -1038,6 +1104,7 @@ input[type="radio"].visually-hidden {
   color: var(--white);
 
   background-color: var(--coral-red);
+  border-radius: 3px;
 }
 
 .pattern__btn-price:hover,
@@ -1051,12 +1118,24 @@ input[type="radio"].visually-hidden {
 
 .patterns__pagination {
   display: flex;
-  margin: 0;
+  margin: 54px 0 0;
   padding: 0;
   list-style: none;
+  outline: 1px solid red;
 }
-.patterns__pagination-item a{
-  margin-right: 10px;
+
+.patterns__pagination-item + .patterns__pagination-item {
+  margin-left: 11px;
+}
+
+.patterns__pagination-item a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
 
   font-size: 16px;
   line-height: 18px;
@@ -1067,14 +1146,22 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
 
   background-color: var(--back-grey);
+  border-radius: 3px;
+}
+
+.patterns__pagination-item--next a {
+  width: auto;
+  padding: 16px 78px;
 }
 
 .patterns__pagination-item--active a {
   background-color: var(--white);
+  border: 3px solid var(--border-page-grey);
+  box-sizing: border-box;
 }
 
-.patterns__pagination-item a:hover,
-.patterns__pagination-item a:focus {
+.patterns__pagination-item:hover a:hover,
+.patterns__pagination-item:focus a:focus {
   background-color: var(--back-grey-hover);
 }
 
